@@ -283,7 +283,6 @@ int expand_fragmented_files_list(winx_file_info *f,udefrag_job_parameters *jp);
 void truncate_fragmented_files_list(winx_file_info *f,udefrag_job_parameters *jp);
 winx_blockmap *build_fragments_list(winx_file_info *f,ULONGLONG *n_fragments);
 void release_fragments_list(winx_blockmap **fragments);
-ULONGLONG defrag_cc_routine(udefrag_job_parameters *jp);
 
 int move_file(winx_file_info *f,
               ULONGLONG vcn,
